--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.6.0",
+    "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
